--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 		<title></title>
 		<!-- FONTAWESOME -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+		<!-- GOOGLE FONT -->
+		<link href="https://fonts.googleapis.com/css?family=Kalam:300,400,700" rel="stylesheet">
 		<!-- BOOTSTRAP CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+		<!-- ANIMATED CSS -->
+		<link rel="stylesheet"
+ href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 		<!-- ORIGINAL CSS -->
 		<link rel="stylesheet" href="css/main.css">
 	</head>
@@ -18,22 +23,28 @@
 
 		<header>
 			<div class="container col-10 text-center">
-				<h1 id="#">ZODIAC SIGN</h1>
+				<h1 class="headerH1 display-2 font-weight-bold">ZODIAC SIGN</h1>
 			</div>
-			<div class="container col-8 dropdown">
-
+			<!-- Dropdown menu - myList and option work with JS -->
+			<div class="container col-8 dropdown mb-5 form-group text-center">
+				<label class="h4">Choose your zodiac sign</label>
 				<select id="myList" class="form-control form-control-lg">
+					<!-- it works without the below option tag (JS create option)
+			    but this option tag gives "empty selection" in the form box
+				  if you want, you can add word inside <option>, then that word will be
+				  default of dropdown mene -->
 				 <option></option>
 				</select>
 			</div>
 		</header>
 
-		<section class="text-center">
+		<!-- Result of zodiac sign - works with JS -->
+		<section class="result text-center">
 			<div class="form-group displayInfo" id="displayInfo">
 				<h1 id="sign"></h1>
-				<img id="icon" src="" alt="">
-				<h4 id="details"></h4>
-				<h4 id="goodDay"></h4>
+				<img class="my-5"id="icon" src="" alt="">
+				<h4 class="mb-3" id="details"></h4>
+				<h4 class="mb-3" id="goodDay"></h4>
 				<h4 id="badDay"></h4>
 			</div>
 
