background,favicon,nedia query

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 		<!-- VIEWPORT -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- TITLE -->
-		<title></title>
+		<title>zodiac</title>
+		<!-- FAVICON -->
+		<link rel="shortcut icon" href="img/favicon.png">
 		<!-- FONTAWESOME -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 		<!-- GOOGLE FONT -->
@@ -19,8 +21,10 @@
 		<!-- ORIGINAL CSS -->
 		<link rel="stylesheet" href="css/main.css">
 	</head>
-	<body>
 
+	<!-- Body starts -->
+	<body>
+		<!-- Header -->
 		<header>
 			<div class="container col-10 text-center">
 				<h1 class="headerH1 display-2 font-weight-bold">ZODIAC SIGN</h1>
@@ -42,19 +46,12 @@
 		<section class="result text-center">
 			<div class="form-group displayInfo" id="displayInfo">
 				<h1 id="sign"></h1>
-				<img class="my-5"id="icon" src="" alt="">
+				<img class="my-5 img-fluid" id="icon" src="" alt="">
 				<h4 class="mb-3" id="details"></h4>
 				<h4 class="mb-3" id="goodDay"></h4>
 				<h4 id="badDay"></h4>
 			</div>
-
 		</section>
-
-
-
-
-
-
 
 
 <!-- JQUERY -->
@@ -65,7 +62,7 @@
 		<!-- Bootstrap JS plugin / This makes bootstrap 4 JS work -->
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 		<!-- Original custom JS -->
-  	<script type="text/javascript" src="js/main.js"></script>
+  	<script src="js/main.js"></script>
 
 
 	</body>
