--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- FONTAWESOME -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 		<!-- GOOGLE FONT -->
-		<link href="https://fonts.googleapis.com/css?family=Kalam:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Markazi+Text:400,700" rel="stylesheet">
 		<!-- BOOTSTRAP CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<!-- ANIMATED CSS -->
@@ -31,7 +31,7 @@
 			</div>
 			<!-- Dropdown menu - myList and option work with JS -->
 			<div class="container col-8 dropdown mb-5 form-group text-center">
-				<label class="h4">Choose your zodiac sign</label>
+				<label class="h3">Choose your zodiac sign</label>
 				<select id="myList" class="form-control form-control-lg">
 					<!-- it works without the below option tag (JS create option)
 			    but this option tag gives "empty selection" in the form box
@@ -43,7 +43,7 @@
 		</header>
 
 		<!-- Result of zodiac sign - works with JS -->
-		<section class="result text-center">
+		<section class="result text-center mb-5">
 			<div class="form-group displayInfo" id="displayInfo">
 				<h1 id="sign"></h1>
 				<img class="my-5 img-fluid" id="icon" src="" alt="">
