background,font updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<!-- FONTAWESOME -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 		<!-- GOOGLE FONT -->
-    <link href="https://fonts.googleapis.com/css?family=Markazi+Text:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
+
 		<!-- BOOTSTRAP CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<!-- ANIMATED CSS -->
@@ -27,12 +29,12 @@
 		<!-- Header -->
 		<header>
 			<div class="container col-10 text-center">
-				<h1 class="headerH1 display-2 font-weight-bold">ZODIAC SIGN</h1>
+				<h1 class="headerH1 display-4 font-weight-bold">Welcome to Zodiac Sings</h1>
 			</div>
 			<!-- Dropdown menu - myList and option work with JS -->
 			<div class="container col-8 dropdown mb-5 form-group text-center">
 				<label class="h3">Choose your zodiac sign</label>
-				<select id="myList" class="form-control form-control-lg">
+				<select id="myList" class="form-control">
 					<!-- it works without the below option tag (JS create option)
 			    but this option tag gives "empty selection" in the form box
 				  if you want, you can add word inside <option>, then that word will be
